sass/partials/modules/_modules.scss
// Modules

#header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 50px;
    background-color: $whiteColor;
    z-index: 90;
}

#main {
    position: relative;
    top: 50px;
    left: 0;
    right: 0;
    min-height: calc(100vh - 100px); // Meant for sticky footer and Nav
}

#footer {
    height: 50px;
    max-height: 50px;
    background-color: $whiteColor;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    p {
        text-align: center;
        font-size: 14px;
        margin: 0;
        line-height: 50px;
    }
}

.itemSeparation {
    margin-bottom: 10px;
}

.overlayOuter {
    background-color: $overlayColor;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    display: none;
}

.overlayInner {
    width: 100%;
    background-color: $whiteColor;
    @include borderRadius($borderRadius);
    max-width: 400px;
    margin: 0 auto;
}

.closeButton {
    width: 32px;
    height: 32px;
    position: relative;

    .line1 {
        transform: rotate(45deg);
        top: 15px;
    }

    .line2 {
        transform: rotate(-45deg);
        bottom: 15px;
    }

    .line1, .line2 {
        background-color: $blueColor;
        width: 20px;
        height: 2px;
        display: block;
        position: absolute;
    }
}

.hamburgerButton {
    position: absolute;
    width: 30px;
    height: 30px;
    margin: 10px;
    cursor: pointer;

    .line1 {
        top: 8px;
    }

    .line2 {
        top: 14px;
    }

    .line3 {
        bottom: 8px;
    }

    .line1, .line2, .line3 {
        background-color: $greyColor;
        display: block;
        position: absolute;
        width: 20px;
        height: 2px;
        margin: 0 auto;
        left: 0;
        right: 0;
        transition: $transitionSpeed;
    }
}

#mobileNav {
    position: fixed;
    top: 50px;
    left: -100%;
    background-color: $whiteColor;
    z-index: 50;
    width: 100%;
    transition: $transitionSpeed;
    height: calc(100vh - 50px);

    h1, p {
        text-align: center;
    }
    
    ul {
        list-style-type: none;
        display: grid;
        grid-column-gap: 10px;

        li {
            background-color: $blueColor;
            @include borderRadius($borderRadius);
            margin-bottom: 10px;
            height: 75px;
            position: relative;

            a {
                color: $whiteColor;
                text-align: center;
                position: absolute;
                line-height: 75px;
                left: 0;
                right: 0;
            }
        }

        li:nth-child(1) {
            grid-column: 1/2;
        }

        li:nth-child(2) {
            grid-column: 2/3;
        }
    }
}

.scenes {
    display: grid;
    grid-column-gap: 10px;
    position: relative;

    .scene {
        height: 75px;
        background-color: $blueColor;
        opacity: 0.5;
        @include borderRadius($borderRadius);
        cursor: pointer;
        position: relative;
        transition: $transitionSpeed;

        img {
            width: 25px;
            height: 25px;
            position: relative;
            left: 10px;
        }

        p {
            color: $whiteColor;
            display: inline;
            position: absolute;
            right: 10px;
        }

        img, p {
            @include verticalCenter;
        }
    }

    .scene:nth-child(1) {
        grid-column: 1/2;
    }

    .scene:nth-child(2) {
        grid-column: 2/3;
    }
}

.devices {
    position: relative;

    .device {
        height: 75px;
        background-color: $redColor;
        @include borderRadius($borderRadius);
        margin-bottom: 10px;
        position: relative;

        p {
            color: $whiteColor;
            display: inline;
            left: 20px;
            max-width: calc(100% - 135px); // Ensures the text doesn't overlap the switch
        }

        img {
            right: 20px;
        }

        .switch {
            width: 75px;
        }

        .settings {
            width: 35px;
        }

        p, img {
            position: absolute;
            @include verticalCenter;
        }
    }
}

